# autotoolsHello

./: Makefile  Makefile.in  config.status  configure  configure.ac  configure.in
autom4te.cache/: output.0  output.1  output.2  output.4  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
src/: .hello.swp  Makefile  Makefile.in  hello  hello.c
src/hello1/: Makefile.am  Makefile.in
src/hello2/: Makefile.in
src/libhello/: Makefile.in
src/testsuite/config/: unix.exp
src/testsuite/hello.test/: hello.exp
